--- a/res/layout/activity_compare_price.xml
+++ b/res/layout/activity_compare_price.xml
@@ -28,12 +28,13 @@
         
          <EditText
              android:id="@+id/editTextCustomer"
-              android:layout_width="0dip"
+             android:layout_width="0dip"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:ems="10"
-             android:textSize="14sp"
-             android:inputType="number"/>
+             android:inputType="number"
+             android:nextFocusDown="@+id/editTextCustomer2"
+             android:textSize="14sp" />
          
          <requestFocus />
          
@@ -46,15 +47,16 @@
             android:onClick="onCustomerSearch" />
          
          <EditText
-	        android:id="@+id/editTextCustomer2"
-	        android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="5dp"
-	        android:ems="10"
-	        android:textSize="14sp"
-	        android:inputType="text"
-	        android:singleLine="true"  />
+             android:id="@+id/editTextCustomer2"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_marginLeft="5dp"
+             android:layout_weight="1"
+             android:ems="10"
+             android:inputType="text"
+             android:nextFocusDown="@+id/editTextBarcord"
+             android:singleLine="true"
+             android:textSize="14sp" />
 	        
     </LinearLayout>
     
@@ -81,8 +83,9 @@
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:ems="10"
-             android:textSize="14sp"
-             android:inputType="number" />
+             android:inputType="number"
+             android:nextFocusDown="@+id/editTextProductionName"
+             android:textSize="14sp" />
         
          <requestFocus />
          
