--- a/res/layout/activity_manage_event.xml
+++ b/res/layout/activity_manage_event.xml
@@ -141,9 +141,10 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:inputType="number"
             android:ems="10"
-            android:textSize="14sp"  />
+            android:inputType="number"
+            android:nextFocusDown="@id/editTextProductionName"
+            android:textSize="14sp" />
         
          <Button
 	        android:id="@+id/buttonBarcode"
@@ -165,18 +166,18 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
          <EditText
-	        android:id="@+id/editTextProductName"
-	        android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.48"
-            android:inputType="text"
-            android:ems="10"            
-	        android:clickable="false" 
-		    android:cursorVisible="false" 
-		    android:focusable="false" 
-		    android:focusableInTouchMode="false"
-            android:textSize="14sp"  
-	     />       
+             android:id="@+id/editTextProductName"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_weight="0.48"
+             android:clickable="false"
+             android:cursorVisible="false"
+             android:ems="10"
+             android:focusable="false"
+             android:focusableInTouchMode="false"
+             android:inputType="text"
+             android:nextFocusDown="@+id/editTextPurchasePrice"
+             android:textSize="14sp" />
     
     </LinearLayout>
     
@@ -202,13 +203,14 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="number"
+            android:clickable="false"
+            android:cursorVisible="false"
             android:ems="10"
-	        android:clickable="false" 
-		    android:cursorVisible="false" 
-		    android:focusable="false" 
-		    android:focusableInTouchMode="false"
-            android:textSize="14sp"  />
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:inputType="number"
+            android:nextFocusDown="@+id/editTextSalePrice"
+            android:textSize="14sp" />
         
         <TextView
             android:id="@+id/textView8"
@@ -222,18 +224,18 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
          <EditText
-	        android:id="@+id/editTextSalePrice"
-	        android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.7"
-            android:inputType="number"
-            android:ems="10"
-	        android:clickable="false" 
-		    android:cursorVisible="false" 
-		    android:focusable="false" 
-		    android:focusableInTouchMode="false"
-            android:textSize="14sp"  
-	     />       
+             android:id="@+id/editTextSalePrice"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_weight="0.7"
+             android:clickable="false"
+             android:cursorVisible="false"
+             android:ems="10"
+             android:focusable="false"
+             android:focusableInTouchMode="false"
+             android:inputType="number"
+             android:nextFocusDown="@+id/editTextAmount"
+             android:textSize="14sp" />
     
     </LinearLayout>
 
@@ -259,8 +261,9 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="0.9"
-            android:inputType="number"
             android:ems="10"
+            android:inputType="number"
+            android:nextFocusDown="@+id/editTextProfitRatio"
             android:textSize="14sp" />
         
         <TextView
