--- a/res/layout/activity_manage_product.xml
+++ b/res/layout/activity_manage_product.xml
@@ -34,11 +34,12 @@
              android:layout_width="0dip"
              android:layout_height="wrap_content"
              android:layout_weight="1"
-		     android:singleLine="true"
-		     android:lines="1"
              android:ems="10"
-             android:textSize="12sp"
-             android:inputType="number" />
+             android:inputType="number"
+             android:lines="1"
+             android:nextFocusDown="@id/editTextProductName"
+             android:singleLine="true"
+             android:textSize="12sp" />
          
          <requestFocus />
          
@@ -62,16 +63,16 @@
              android:textSize="14sp" />
         
          <EditText
-	        android:id="@+id/editTextProductName"
-	        android:layout_width="0dip"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-		    android:singleLine="true"
-		    android:lines="1"
-	        android:ems="10"
-	        android:textSize="14sp" />
+             android:id="@+id/editTextProductName"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_weight="1"
+             android:ems="10"
+             android:lines="1"
+             android:nextFocusDown="@id/editTextCustomerCode"
+             android:singleLine="true"
+             android:textSize="14sp" />
              
-
     </LinearLayout>
     
     <LinearLayout
@@ -98,9 +99,10 @@
              android:layout_weight="1"
              android:ems="10"
              android:inputType="number"
-             android:textSize="14sp"
-		    android:singleLine="true"
-		    android:lines="1" />
+             android:lines="1"
+             android:nextFocusDown="@id/editTextCustomerName"
+             android:singleLine="true"
+             android:textSize="14sp" />
 	        
          <Button
 	        android:id="@+id/buttonCustomer"
@@ -111,15 +113,16 @@
             android:onClick="onCustomerSearch" />
         
          <EditText
-	        android:id="@+id/editTextCustomerName"
-	        android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="5dp"
-	        android:ems="10"
-	        android:textSize="14sp"
-		    android:singleLine="true"
-		    android:lines="1" />
+             android:id="@+id/editTextCustomerName"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_marginLeft="5dp"
+             android:layout_weight="1"
+             android:ems="10"
+             android:lines="1"
+             android:nextFocusDown="@+id/editTextStandard"
+             android:singleLine="true"
+             android:textSize="14sp" />
     
     </LinearLayout>
     
@@ -239,11 +242,12 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1.2"
-            android:inputType="number"
             android:ems="10"
-            android:textSize="14sp"
-		    android:singleLine="true"
-		    android:lines="1" />
+            android:inputType="number"
+            android:lines="1"
+            android:nextFocusDown="@id/editTextPurchasePrice"
+            android:singleLine="true"
+            android:textSize="14sp" />
         
         <TextView
             android:id="@+id/textView9"
@@ -296,11 +300,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.2"
-            android:inputType="number"
             android:ems="10"
-            android:textSize="14sp"
-		    android:singleLine="true"
-		    android:lines="1" />
+            android:inputType="number"
+            android:lines="1"
+            android:nextFocusDown="@+id/editTextPurchasePriceOriginal"
+            android:singleLine="true"
+            android:textSize="14sp" />
         
         <TextView
             android:id="@+id/textView11"
@@ -314,16 +319,16 @@
             android:textSize="14sp" />
 
          <EditText
-	        android:id="@+id/editTextPurchasePriceOriginal"
-	        android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.2"
-            android:inputType="number"
-	        android:ems="10"
-	        android:textSize="14sp" 
-		    android:singleLine="true"
-		    android:lines="1"
-	     />       
+             android:id="@+id/editTextPurchasePriceOriginal"
+             android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             android:layout_weight="1.2"
+             android:ems="10"
+             android:inputType="number"
+             android:lines="1"
+             android:nextFocusDown="@+id/editTextSalesPrice"
+             android:singleLine="true"
+             android:textSize="14sp" />
     
     </LinearLayout>
 
@@ -349,10 +354,12 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1.2"
-            android:inputType="number"
             android:ems="10"
-		    android:singleLine="true"
-		    android:lines="1"
+            android:imeOptions="actionNext"
+            android:inputType="number"
+            android:lines="1"
+            android:nextFocusDown="@id/editTextProfitRatio"
+            android:singleLine="true"
             android:textSize="14sp" />
 
         <TextView
@@ -371,11 +378,13 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1.2"
+            android:ems="10"
+            android:imeOptions="actionDone|normal"
             android:inputType="number"
-            android:ems="10"            
-		    android:singleLine="true"
-		    android:lines="1"
+            android:lines="1"
+            android:singleLine="true"
             android:textSize="14sp" />
+
     </LinearLayout>
     
     
