--- a/res/layout/activity_purchase_regist.xml
+++ b/res/layout/activity_purchase_regist.xml
@@ -201,10 +201,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:textSize="14sp"
-		    android:singleLine="true"
-		    android:inputType="number"
-		    android:lines="1" />
+            android:inputType="number"
+            android:lines="1"
+            android:nextFocusDown="@id/editTextSalePrice"
+            android:singleLine="true"
+            android:textSize="14sp" />
        
         <TextView
             android:id="@+id/textView7"
@@ -218,16 +219,16 @@
             android:textSize="14sp" />
 
          <EditText
-	        android:id="@+id/editTextSalePrice"
-	        android:layout_width="0dip"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:ems="10"
-		    android:singleLine="true"
-		    android:inputType="number"
-		    android:lines="1"
-	        android:textSize="14sp"
-	     />       
+             android:id="@+id/editTextSalePrice"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_weight="1"
+             android:ems="10"
+             android:inputType="number"
+             android:lines="1"
+             android:nextFocusDown="@id/editTextAmount"
+             android:singleLine="true"
+             android:textSize="14sp" />
     
     </LinearLayout>
 
@@ -254,10 +255,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:textSize="14sp"
             android:inputType="number"
-		    android:singleLine="true"
-		    android:lines="1" />
+            android:lines="1"
+            android:nextFocusDown="@id/editTextProfitRatio"
+            android:singleLine="true"
+            android:textSize="14sp" />
         
         <TextView
             android:id="@+id/textView9"
